--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="container">
-    <p>I am working</p>
+    <app-recipes></app-recipes>
+    <app-shopping-list></app-shopping-list>
 </div>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
