--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,9 +3,12 @@
         <app-shopping-edit></app-shopping-edit>
         <hr/>
         <ul class="list-group">
-            <li class="list-group-item">
-                <a href="#" class="list-group-item" style="cursor: pointer;"></a>
-            </li>
+            <a href="#" 
+                class="list-group-item" 
+                style="cursor: pointer;"
+                *ngFor="let ingredient of ingredients">
+                {{ingredient.name}}({{ingredient.quantity}})
+            </a>
         </ul>
     </div>
 </div>
