property binding and event

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,12 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipe-list></app-recipe-list>
+        <app-recipe-list (recipeSelectedEvent)="onShowRecipeDetails($event)"></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail></app-recipe-detail>
+        <app-recipe-detail *ngIf="recipe; else recipeSelectionRequired" [recipeDetail]="recipe">
+        </app-recipe-detail>
+        <ng-template #recipeSelectionRequired>
+            <p>Please select Recipe for Display</p>
+        </ng-template>
     </div>
 </div>
