--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<app-header></app-header>
+<app-header (navigationEvent)="onTabClick($event)"></app-header>
 <div class="container">
-    <app-recipes></app-recipes>
-    <app-shopping-list></app-shopping-list>
+    <div class="row">
+        <div class="col-md-12">
+            <app-recipes *ngIf="currentTab==='Recipe'"></app-recipes>
+            <app-shopping-list *ngIf="currentTab==='Shopping-List'"></app-shopping-list>
+        </div>
+    </div>
 </div>
 <!-- <app-footer></app-footer> -->
