--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img [src]="recipeDetail.imagePath" [alt]="recipeDetail.name" class="img-responsive">
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
-        <h1>Recipe Name</h1>
+        <h1>{{recipeDetail.name}}</h1>
     </div>
 </div>
 <div class="row">
@@ -25,7 +25,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <p>Description</p>
+        <p>{{recipeDetail.description}}</p>
     </div>
 </div>
 <div class="row">
