--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,19 +1,29 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form action="#">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name">
+                    <input id="name"
+                           type="text" 
+                           class="form-control"
+                           #ingredientName>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="name">Quantity</label>
-                    <input type="number" class="form-control" id="quantity">   
+                    <input id="quantity"
+                           type="number" 
+                           class="form-control"
+                           #ingredientQuantity>   
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Add</button>
+                    <button class="btn btn-success" 
+                            type="button"
+                            (click)="onAddIngredient()">
+                            Add
+                    </button>
                     <button class="btn btn-danger" type="button">delete</button>
                     <button class="btn btn-primary" type="reset">clear</button>
                 </div>
