--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,9 +11,8 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="btn-group" appDropDown>
-            <button type="button"
-                    class="btn btn-primary dropdown-toggle">
-                    Manage Recipe <span class="caret"></span>
+            <button type="button" class="btn btn-primary dropdown-toggle">
+                Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a href="#">To Shopping List</a></li>
@@ -30,6 +29,11 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <p>Ingredients</p>
+        <ul class="list-group">
+            <li class="list-group-item" 
+                *ngFor="let ingredient of recipeDetail.ingredients">
+                {{ingredient.name }} - {{ ingredient.quantity}}
+            </li>
+        </ul>
     </div>
 </div>
