page reload fix

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,9 +15,9 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#" (click)="addIngredientsToShoppingList()">To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="addIngredientsToShoppingList()">To Shopping List</a></li>
+                <li><a style="cursor: pointer;">Edit Recipe</a></li>
+                <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
@@ -30,8 +30,7 @@
 <div class="row">
     <div class="col-xs-12">
         <ul class="list-group">
-            <li class="list-group-item" 
-                *ngFor="let ingredient of recipeDetail.ingredients">
+            <li class="list-group-item" *ngFor="let ingredient of recipeDetail.ingredients">
                 {{ingredient.name }} - {{ ingredient.quantity}}
             </li>
         </ul>
