new component addition for recipe display

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,10 +3,6 @@
         <app-recipe-list></app-recipe-list>
     </div>
     <div class="col-md-7">
-        <app-recipe-detail *ngIf="selectedRecipe; else recipeSelectionRequired" [recipeDetail]="selectedRecipe">
-        </app-recipe-detail>
-        <ng-template #recipeSelectionRequired>
-            <p>Please select Recipe for Display</p>
-        </ng-template>
+        <router-outlet></router-outlet>
     </div>
 </div>
