--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,15 +1,12 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success" [routerLink]="['new']">New Recipe</button>
     </div>
 </div>
-<hr/>
+<hr />
 <div class="row">
     <div class="col-xs-12">
-        <app-recipe-item 
-            *ngFor="let recipeElement of recipes" 
-            [recipe]="recipeElement">
+        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement">
         </app-recipe-item>
     </div>
 </div>
-
