--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,29 +1,31 @@
 <div class="row">
     <div class="col-xs-12">
-        <form action="#">
+        <form (ngSubmit)="onAddIngredient()" #ingredientForm="ngForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input id="name"
-                           type="text" 
+                    <input id="name" 
+                           type="text"
                            class="form-control"
-                           #ingredientName>
+                           name="name"
+                           ngModel
+                           required>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="name">Quantity</label>
                     <input id="quantity"
-                           type="number" 
+                           type="number"
                            class="form-control"
-                           #ingredientQuantity>   
+                           name="quantity"
+                           ngModel
+                           required>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" 
-                            type="button"
-                            (click)="onAddIngredient()">
-                            Add
-                    </button>
+                    <button class="btn btn-success"
+                            type="submit"
+                            [disabled]="ingredientForm.invalid">Add</button>
                     <button class="btn btn-danger" type="button">delete</button>
                     <button class="btn btn-primary" type="reset">clear</button>
                 </div>
