--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -17,6 +17,7 @@
                            type="number"
                            class="form-control"
                            name="quantity"
+                           pattern="^[1-9][0-9]*$"
                            ngModel
                            required>
                 </div>
@@ -25,7 +26,9 @@
                 <div class="col-xs-12">
                     <button class="btn btn-success"
                             type="submit"
-                            [disabled]="ingredientForm.invalid">Add</button>
+                            [disabled]="ingredientForm.invalid">
+                            {{editMode?'Update':'Add'}}
+                    </button>
                     <button class="btn btn-danger" type="button">delete</button>
                     <button class="btn btn-primary" type="reset">clear</button>
                 </div>
