--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-xs-10">
         <app-shopping-edit></app-shopping-edit>
-        <hr/>
+        <hr />
         <ul class="list-group">
-            <a href="#" 
-                class="list-group-item" 
-                style="cursor: pointer;"
-                *ngFor="let ingredient of ingredients">
+            <a class="list-group-item"
+               style="cursor: pointer;"
+               *ngFor="let ingredient of ingredients; let i=index;"
+               (click)="onIngredientSelection(i)">
                 {{ingredient.name}}({{ingredient.quantity}})
             </a>
         </ul>
