--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -30,7 +30,9 @@
                             {{editMode?'Update':'Add'}}
                     </button>
                     <button class="btn btn-danger" type="button">delete</button>
-                    <button class="btn btn-primary" type="reset">clear</button>
+                    <button class="btn btn-primary"
+                            type="reset"
+                            (click)="onClear()">clear</button>
                 </div>
             </div>
         </form>
