--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,7 +3,9 @@
         <form [formGroup]="recipeDetailForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Save</button>
+                    <button class="btn btn-success"
+                            type="submit"
+                            [disabled]="recipeDetailForm.invalid">Save</button>
                     <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
@@ -57,7 +59,8 @@
                         <label for="ingredients">Ingredients</label>
                         <div class="row">
                             <div class="col-xs-12">
-                                <button class="btn btn-success">Add Ingredients</button>
+                                <button class="btn btn-success" type="button" 
+                                        (click)="onAddIngredient()">Add Ingredients</button>
                             </div>
                         </div>
                         <br />
@@ -65,7 +68,8 @@
                             <div class="col-xs-12" formArrayName="ingredients">
                                 <div class="row"
                                     *ngFor="let ingredient of getIngredientControls(); let i=index;"
-                                    [formGroupName]="i">
+                                    [formGroupName]="i"
+                                    style="margin-top: 5px;">
                                     <div class="col-xs-9">
                                         <input type="text"
                                             id="ingredientName"
@@ -81,7 +85,8 @@
                                     <div class="col-xs-1">
                                         <button class="btn btn-danger"
                                                 type="button"
-                                                id="deleteIngredients">X</button>
+                                                id="deleteIngredients"
+                                                (click)="onDeleteIngredient(i)">X</button>
                                     </div>
                                 </div>
                             </div>
