--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
             <ul class="dropdown-menu">
                 <li><a style="cursor: pointer;" (click)="addIngredientsToShoppingList()">To Shopping List</a></li>
                 <li><a style="cursor: pointer;" [routerLink]="['edit']">Edit Recipe</a></li>
-                <li><a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" [routerLink]="['delete']">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
