--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -27,14 +27,15 @@
                         <input type="text"
                                id="imagePath"
                                class="form-control"
-                               formControlName="imagePath">
+                               formControlName="imagePath"
+                               #imagePath>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="form-group">
-                        <img src=""
+                        <img [src]="imagePath.value"
                              alt=""
                              class="img-responsive">
                     </div>
