--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,7 @@
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/recipes">Recipe</a></li>
                 <li routerLinkActive="active"><a [routerLink]="['shoppingList']">Shopping List</a></li>
+                <li routerLinkActive="active"><a routerLink="auth">Login</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" appDropDown>
