--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
+        <div *ngIf="isLoading">
+            <app-loading-spinner></app-loading-spinner>
+        </div>
         <form (ngSubmit)="onSubmit()"
               #form="ngForm"
               *ngIf="!isLoading">
