--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,11 +5,14 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="/recipes">Recipe</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="/recipes">Recipe</a></li>
                 <li routerLinkActive="active"><a [routerLink]="['shoppingList']">Shopping List</a></li>
-                <li routerLinkActive="active"><a routerLink="auth">Login</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthenticated"><a routerLink="auth">Login</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" *ngIf="isAuthenticated">
+                <li>
+                    <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
+                </li>
                 <li class="dropdown" appDropDown>
                     <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage
                         <span class="caret"></span></a>
