enhanced alert modal

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -40,7 +40,8 @@
             </div>
         </form>
         <app-alert *ngIf="error"
-                   [message]="error">
+                   [message]="error"
+                   (closeEvent)="onAlertCloseEvent()">
         </app-alert>
         <!-- <div class="row alert alert-danger" *ngIf="error">
             <p>
