change to dynamically create component

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -43,6 +43,8 @@
                    [message]="error"
                    (closeEvent)="onAlertCloseEvent()">
         </app-alert>
+        <ng-template appPlaceholder></ng-template>
+        
         <!-- <div class="row alert alert-danger" *ngIf="error">
             <p>
                 {{error}}
