--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,7 @@
         <ul class="list-group">
             <a class="list-group-item"
                style="cursor: pointer;"
-               *ngFor="let ingredient of ingredients; let i=index;"
+               *ngFor="let ingredient of (ingredients| async).ingredients; let i=index;"
                (click)="onIngredientSelection(i)">
                 {{ingredient.name}}({{ingredient.quantity}})
             </a>
